# lmflux

./: .gitignore  README.md  custom.css  mkdocs.yml  pyproject.toml  readthedocs.yaml  requirements-docs.txt  setup.cfg
.github/workflows/: feature.yaml  python-publish.yml  tests.yaml
docs/: index.md
docs/getting_started/: graph_types.md  index.md
docs/home/: contributing.md
example/: example_agent.ipynb  example_agent_deep_research-v3.ipynb  local_llms.py
example/agent/: example.ipynb
example/graph/: example_agent_mesh.ipynb  example_task_graph.ipynb
example/prompts/: compile_results.txt  search_string_maker.txt
example/prompts/expert_maker/: instruct.md
example/prompts/expert_planner/: instruct.md
example/prompts/general/: role_play.md
example/prompts/report_generator/: instruct.md  system.md
example/prompts/researcher/: query.md  reflect.md  system.md
example/prompts/text_compressor/: instruct.md  system.md
example/results/: 518ffae1-8763-4525-bd2d-0169b8dcfe5a.md
example/templates/: example_templates.ipynb
src/lmflux/: __init__.py
src/lmflux/agents/: sessions.py  structure.py
src/lmflux/core/: components.py  llm_impl.py
src/lmflux/flow/: __init__.py  definitions.py  toolbox.py
src/lmflux/graphs/: __init__.py  utils.py
tests/: conftest.py
tests/agents/: test_agents_components.py  test_agents_sessions.py  test_agents_structure.py
tests/core/: test_core_components.py  test_core_llm_impl.py  test_core_llms.py  test_llm_impl_extended.py  test_templates.py
tests/flow/: test_flow_definitions.py  test_flow_toolbox.py
(+9 files in other folders)
