[project]
name = "lmflux"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.176.0",
    "google-auth-oauthlib>=1.2.2",
    "ipykernel>=6.29.5",
    "jsonpath-ng>=1.7.0",
    "openai>=1.95.1",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
